# zhihu-llm-17th

./: .gitignore  02.function_call.py  02.function_call_dashscope.py  03.tools_dashscope.py  04.TF-IDF.md  04.Word2Vec.md  04.bigram.ipynb  04.hotel_rec.ipynb  04.hotel_rec.md  04.hotel_rec.py  04.knowledge_base.py  04.three_kingdowns_similarity.ipynb  04.unigram.ipynb  04.word_similarity.py  README.md  chatpdf-faiss.ipynb  docker-compose.yml  pyproject.toml  test.py
kb_service/: KnowledgeBaseService.py
meta_store/: base.py  redis_store.py
three_kingdoms/segment/: segment_0.txt
utils/: word_seg.py
vector_store/: base.py  faiss_store.py
