[project]
name = "zhihu-llm-17th"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.24.6",
    "debugpy>=1.8.17",
    "dotenv>=0.9.9",
    "ipdb>=0.13.13",
    "langchain>=0.3.27",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]
