[project]
name = "zhihu-llm-17th"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.24.6",
    "debugpy>=1.8.17",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "gensim>=4.3.3",
    "ipdb>=0.13.13",
    "jieba>=0.42.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.35",
    "matplotlib>=3.10.7",
    "openai>=2.4.0",
    "pandas>=2.3.3",
    "pymupdf>=1.26.5",
    "pypdf2>=3.0.1",
    "redis>=6.4.0",
    "scikit-learn>=1.7.2",
]
